# mistral-pdf-to-markdown

./: .releaserc.json  CHANGELOG.md  README.md  bear.md  example.md  pyproject.toml
.github/workflows/: release.yml
src/mistral_pdf_to_markdown/: main.py
typings/pypandoc/: __init__.pyi
