[project]
name = "mistral-pdf-to-markdown"
version = "1.2.0"
description = "A CLI tool to convert PDF files to Markdown using the Mistral AI OCR API."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Arcangelo Massari", email = "info@arcangelomassari.com" }
]
dependencies = [
    "click>=8.4.2",
    "mistralai>=2.6.0",
    "pypandoc>=1.17",
    "python-dotenv>=1.2.2",
    "weasyprint>=69.0",
]

[project.scripts]
pdf2md = "mistral_pdf_to_markdown.main:cli"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
stubPath = "typings"
typeCheckingMode = "strict"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
